// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TopThreeThings /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <PluginBanner
    img="top3.jpg"
    subTitle="Top 3 things to know about my care"
    title="Top 3 Things"
    toRight={false}
  />
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="topThreeThingsMain"
            isBtnExpandVisible={false}
            name="topThreeThingsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Top 3 Things"
          />
          <PluginMainPanel
            columnNameSortBy="dateCreated"
            emptyDataMessage="No top 3 things"
            filteredData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "dateCreated",
                  "title": "Date Time (latest)",
                  "transformer": [Function],
                  "width": "35%",
                },
                Object {
                  "key": "name1",
                  "title": "Issue #1",
                  "width": "15%",
                },
                Object {
                  "key": "name2",
                  "title": "Issue #2",
                  "width": "15%",
                },
                Object {
                  "key": "name3",
                  "title": "Issue #3",
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="26566e17-0ede-4818-8453-728ea0aa142c"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="topThreeThings"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TopThreeThings /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="topThreeThingsMain"
            isBtnExpandVisible={true}
            name="topThreeThingsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Top 3 Things"
          />
          <PluginMainPanel
            columnNameSortBy="dateCreated"
            emptyDataMessage="No top 3 things"
            filteredData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "dateCreated",
                  "title": "Date Time (latest)",
                  "transformer": [Function],
                  "width": "35%",
                },
                Object {
                  "key": "name1",
                  "title": "Issue #1",
                  "width": "15%",
                },
                Object {
                  "key": "name2",
                  "title": "Issue #2",
                  "width": "15%",
                },
                Object {
                  "key": "name3",
                  "title": "Issue #3",
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="26566e17-0ede-4818-8453-728ea0aa142c"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="topThreeThings"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <TopThreeThingsDetail
          currentPanel="topThreeThingsDetail"
          detail={
            Object {
              "description1": "My first problem",
              "description2": "My second problem",
              "description3": 1,
              "name1": "Item 2",
              "name2": "Item 2",
              "name3": "Item 2",
              "source": "QEWDDB",
              "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
              "undefined": 1517475061744,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="topThreeThingsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="topThreeThingsPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TopThreeThings /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <PluginBanner
    img="top3.jpg"
    subTitle="Top 3 things to know about my care"
    title="Top 3 Things"
    toRight={false}
  />
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="topThreeThingsMain"
            isBtnExpandVisible={false}
            name="topThreeThingsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Top 3 Things"
          />
          <PluginMainPanel
            columnNameSortBy="dateCreated"
            emptyDataMessage="No top 3 things"
            filteredData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "dateCreated",
                  "title": "Date Time (latest)",
                  "transformer": [Function],
                  "width": "35%",
                },
                Object {
                  "key": "name1",
                  "title": "Issue #1",
                  "width": "15%",
                },
                Object {
                  "key": "name2",
                  "title": "Issue #2",
                  "width": "15%",
                },
                Object {
                  "key": "name3",
                  "title": "Issue #3",
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="topThreeThings"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TopThreeThings /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <PluginBanner
    img="top3.jpg"
    subTitle="Top 3 things to know about my care"
    title="Top 3 Things"
    toRight={false}
  />
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="topThreeThingsMain"
            isBtnExpandVisible={false}
            name="topThreeThingsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Top 3 Things"
          />
          <PluginMainPanel
            columnNameSortBy="dateCreated"
            emptyDataMessage="No top 3 things"
            filteredData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "dateCreated",
                  "title": "Date Time (latest)",
                  "transformer": [Function],
                  "width": "35%",
                },
                Object {
                  "key": "name1",
                  "title": "Issue #1",
                  "width": "15%",
                },
                Object {
                  "key": "name2",
                  "title": "Issue #2",
                  "width": "15%",
                },
                Object {
                  "key": "name3",
                  "title": "Issue #3",
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="26566e17-0ede-4818-8453-728ea0aa142c"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="topThreeThings"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TopThreeThings /> should renders correctly with topThreeThingsPanel and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="topThreeThingsMain"
            isBtnExpandVisible={true}
            name="topThreeThingsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Top 3 Things"
          />
          <PluginMainPanel
            columnNameSortBy="dateCreated"
            emptyDataMessage="No top 3 things"
            filteredData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "dateCreated",
                  "title": "Date Time (latest)",
                  "transformer": [Function],
                  "width": "35%",
                },
                Object {
                  "key": "name1",
                  "title": "Issue #1",
                  "width": "15%",
                },
                Object {
                  "key": "name2",
                  "title": "Issue #2",
                  "width": "15%",
                },
                Object {
                  "key": "name3",
                  "title": "Issue #3",
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="26566e17-0ede-4818-8453-728ea0aa142c"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": "-",
                  "dateCreatedConvert": "01-Jan-2018",
                  "name1": "Item 2",
                  "name2": "Item 2",
                  "name3": "Item 2",
                  "source": "QEWDDB",
                  "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
                  "undefined": 1517475061744,
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="topThreeThings"
            totalEntriesAmount={1}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <TopThreeThingsDetail
          currentPanel="topThreeThingsDetail"
          detail={
            Object {
              "description1": "My first problem",
              "description2": "My second problem",
              "description3": 1,
              "name1": "Item 2",
              "name2": "Item 2",
              "name3": "Item 2",
              "source": "QEWDDB",
              "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
              "undefined": 1517475061744,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="topThreeThingsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="topThreeThingsPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TopThreeThings /> should renders correctly with topThreeThingsPanel and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <TopThreeThingsDetail
          currentPanel="topThreeThingsDetail"
          detail={
            Object {
              "description1": "My first problem",
              "description2": "My second problem",
              "description3": 1,
              "name1": "Item 2",
              "name2": "Item 2",
              "name3": "Item 2",
              "source": "QEWDDB",
              "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
              "undefined": 1517475061744,
            }
          }
          editedPanel={Object {}}
          expandedPanel="topThreeThingsPanel"
          isSubmit={false}
          name="topThreeThingsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="topThreeThingsPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <TopThreeThings /> should renders correctly with topThreeThingsPanel and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;
